--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Hi, I am Angela Chen</h2>
 
         <div class="social_icons">
-            <a href="https://www.facebook.com/profile.php?id=100011455175939"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
             <a href=""><i class="fa fa-skype" aria-hidden="true"></i></a>
